--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
+                    <propertyFile>src/main/resources/liquibase/liquibase.aws.properties</propertyFile>
                 </configuration>
                 <executions>
                     <execution>
